3_AnalisadorSintatico/110118995.output
Estado 99 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: program function
    2        | function

    3 function: type_struct ID '(' argList ')' '{' stmtList RETURN value ';' '}'

    4 valueList: valueList ',' value
    5          | value
    6          | %empty

    7 value: NUM_INT
    8      | NUM_FLOAT
    9      | CARACTERE
   10      | ID
   11      | ID '.' FIRST

   12 type_struct: type_simple
   13            | QUEUE LT type_simple GT

   14 type_simple: VOID
   15            | FLOAT
   16            | INT
   17            | CHAR

   18 argList: argList ',' type_struct ID
   19        | type_struct ID
   20        | %empty

   21 stmtList: stmtList stmt
   22         | %empty

   23 stmt: type_struct ID ';'
   24     | ID '(' valueList ')' ';'
   25     | ID '=' ID '(' valueList ')' ';'
   26     | IF '(' value compare_assignment value ')' block
   27     | IF '(' value compare_assignment value ')' block ELSE block
   28     | WHILE '(' value compare_assignment value ')' block
   29     | ID '=' assignment_expression ';'
   30     | type_struct_expression ';'

   31 block: stmt
   32      | '{' stmtList '}'

   33 compare_assignment: EQ
   34                   | NEQ
   35                   | LEQ
   36                   | GEQ
   37                   | LT
   38                   | GT

   39 assignment_expression: assignment_expression '+' term
   40                      | assignment_expression '-' term
   41                      | term

   42 term: term '*' factor
   43     | term '/' factor
   44     | factor

   45 factor: value
   46       | '(' assignment_expression ')'

   47 type_struct_expression: ID '.' SETLAST ARROW value
   48                       | ID '=' ID '.' RMVFIRST


Terminais, com as regras onde eles aparecem

$end (0) 0
'(' (40) 3 24 25 26 27 28 46
')' (41) 3 24 25 26 27 28 46
'*' (42) 42
'+' (43) 39
',' (44) 4 18
'-' (45) 40
'.' (46) 11 47 48
'/' (47) 43
';' (59) 3 23 24 25 29 30
'=' (61) 25 29 48
'{' (123) 3 32
'}' (125) 3 32
error (256)
NUM_INT (258) 7
NUM_FLOAT (259) 8
CARACTERE (260) 9
ID (261) 3 10 11 18 19 23 24 25 29 47 48
VOID (262) 14
FLOAT (263) 15
INT (264) 16
CHAR (265) 17
EQ (266) 33
NEQ (267) 34
LEQ (268) 35
GEQ (269) 36
LT (270) 13 37
GT (271) 13 38
WHILE (272) 28
IF (273) 26 27
ELSE (274) 27
RETURN (275) 3
QUEUE (276) 13
FIRST (277) 11
ARROW (278) 47
SETLAST (279) 47
RMVFIRST (280) 48


Não terminais com as regras onde eles aparecem

$accept (38)
    à esquerda: 0
program (39)
    à esquerda: 1 2, à direita: 0 1
function (40)
    à esquerda: 3, à direita: 1 2
valueList (41)
    à esquerda: 4 5 6, à direita: 4 24 25
value (42)
    à esquerda: 7 8 9 10 11, à direita: 3 4 5 26 27 28 45 47
type_struct (43)
    à esquerda: 12 13, à direita: 3 18 19 23
type_simple (44)
    à esquerda: 14 15 16 17, à direita: 12 13
argList (45)
    à esquerda: 18 19 20, à direita: 3 18
stmtList (46)
    à esquerda: 21 22, à direita: 3 21 32
stmt (47)
    à esquerda: 23 24 25 26 27 28 29 30, à direita: 21 31
block (48)
    à esquerda: 31 32, à direita: 26 27 28
compare_assignment (49)
    à esquerda: 33 34 35 36 37 38, à direita: 26 27 28
assignment_expression (50)
    à esquerda: 39 40 41, à direita: 29 39 40 46
term (51)
    à esquerda: 42 43 44, à direita: 39 40 41 42 43
factor (52)
    à esquerda: 45 46, à direita: 42 43 44
type_struct_expression (53)
    à esquerda: 47 48, à direita: 30


Estado 0

    0 $accept: . program $end

    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    QUEUE  deslocar, e ir ao estado 5

    program      ir ao estado 6
    function     ir ao estado 7
    type_struct  ir ao estado 8
    type_simple  ir ao estado 9


Estado 1

   14 type_simple: VOID .

    $padrão  reduzir usando a regra 14 (type_simple)


Estado 2

   15 type_simple: FLOAT .

    $padrão  reduzir usando a regra 15 (type_simple)


Estado 3

   16 type_simple: INT .

    $padrão  reduzir usando a regra 16 (type_simple)


Estado 4

   17 type_simple: CHAR .

    $padrão  reduzir usando a regra 17 (type_simple)


Estado 5

   13 type_struct: QUEUE . LT type_simple GT

    LT  deslocar, e ir ao estado 10


Estado 6

    0 $accept: program . $end
    1 program: program . function

    $end   deslocar, e ir ao estado 11
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    QUEUE  deslocar, e ir ao estado 5

    function     ir ao estado 12
    type_struct  ir ao estado 8
    type_simple  ir ao estado 9


Estado 7

    2 program: function .

    $padrão  reduzir usando a regra 2 (program)


Estado 8

    3 function: type_struct . ID '(' argList ')' '{' stmtList RETURN value ';' '}'

    ID  deslocar, e ir ao estado 13


Estado 9

   12 type_struct: type_simple .

    $padrão  reduzir usando a regra 12 (type_struct)


Estado 10

   13 type_struct: QUEUE LT . type_simple GT

    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4

    type_simple  ir ao estado 14


Estado 11

    0 $accept: program $end .

    $padrão  aceitar


Estado 12

    1 program: program function .

    $padrão  reduzir usando a regra 1 (program)


Estado 13

    3 function: type_struct ID . '(' argList ')' '{' stmtList RETURN value ';' '}'

    '('  deslocar, e ir ao estado 15


Estado 14

   13 type_struct: QUEUE LT type_simple . GT

    GT  deslocar, e ir ao estado 16


Estado 15

    3 function: type_struct ID '(' . argList ')' '{' stmtList RETURN value ';' '}'

    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    QUEUE  deslocar, e ir ao estado 5

    $padrão  reduzir usando a regra 20 (argList)

    type_struct  ir ao estado 17
    type_simple  ir ao estado 9
    argList      ir ao estado 18


Estado 16

   13 type_struct: QUEUE LT type_simple GT .

    $padrão  reduzir usando a regra 13 (type_struct)


Estado 17

   19 argList: type_struct . ID

    ID  deslocar, e ir ao estado 19


Estado 18

    3 function: type_struct ID '(' argList . ')' '{' stmtList RETURN value ';' '}'
   18 argList: argList . ',' type_struct ID

    ')'  deslocar, e ir ao estado 20
    ','  deslocar, e ir ao estado 21


Estado 19

   19 argList: type_struct ID .

    $padrão  reduzir usando a regra 19 (argList)


Estado 20

    3 function: type_struct ID '(' argList ')' . '{' stmtList RETURN value ';' '}'

    '{'  deslocar, e ir ao estado 22


Estado 21

   18 argList: argList ',' . type_struct ID

    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    QUEUE  deslocar, e ir ao estado 5

    type_struct  ir ao estado 23
    type_simple  ir ao estado 9


Estado 22

    3 function: type_struct ID '(' argList ')' '{' . stmtList RETURN value ';' '}'

    $padrão  reduzir usando a regra 22 (stmtList)

    stmtList  ir ao estado 24


Estado 23

   18 argList: argList ',' type_struct . ID

    ID  deslocar, e ir ao estado 25


Estado 24

    3 function: type_struct ID '(' argList ')' '{' stmtList . RETURN value ';' '}'
   21 stmtList: stmtList . stmt

    ID      deslocar, e ir ao estado 26
    VOID    deslocar, e ir ao estado 1
    FLOAT   deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    CHAR    deslocar, e ir ao estado 4
    WHILE   deslocar, e ir ao estado 27
    IF      deslocar, e ir ao estado 28
    RETURN  deslocar, e ir ao estado 29
    QUEUE   deslocar, e ir ao estado 5

    type_struct             ir ao estado 30
    type_simple             ir ao estado 9
    stmt                    ir ao estado 31
    type_struct_expression  ir ao estado 32


Estado 25

   18 argList: argList ',' type_struct ID .

    $padrão  reduzir usando a regra 18 (argList)


Estado 26

   24 stmt: ID . '(' valueList ')' ';'
   25     | ID . '=' ID '(' valueList ')' ';'
   29     | ID . '=' assignment_expression ';'
   47 type_struct_expression: ID . '.' SETLAST ARROW value
   48                       | ID . '=' ID '.' RMVFIRST

    '('  deslocar, e ir ao estado 33
    '.'  deslocar, e ir ao estado 34
    '='  deslocar, e ir ao estado 35


Estado 27

   28 stmt: WHILE . '(' value compare_assignment value ')' block

    '('  deslocar, e ir ao estado 36


Estado 28

   26 stmt: IF . '(' value compare_assignment value ')' block
   27     | IF . '(' value compare_assignment value ')' block ELSE block

    '('  deslocar, e ir ao estado 37


Estado 29

    3 function: type_struct ID '(' argList ')' '{' stmtList RETURN . value ';' '}'

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    value  ir ao estado 42


Estado 30

   23 stmt: type_struct . ID ';'

    ID  deslocar, e ir ao estado 43


Estado 31

   21 stmtList: stmtList stmt .

    $padrão  reduzir usando a regra 21 (stmtList)


Estado 32

   30 stmt: type_struct_expression . ';'

    ';'  deslocar, e ir ao estado 44


Estado 33

   24 stmt: ID '(' . valueList ')' ';'

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    $padrão  reduzir usando a regra 6 (valueList)

    valueList  ir ao estado 45
    value      ir ao estado 46


Estado 34

   47 type_struct_expression: ID '.' . SETLAST ARROW value

    SETLAST  deslocar, e ir ao estado 47


Estado 35

   25 stmt: ID '=' . ID '(' valueList ')' ';'
   29     | ID '=' . assignment_expression ';'
   48 type_struct_expression: ID '=' . ID '.' RMVFIRST

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 48
    '('        deslocar, e ir ao estado 49

    value                  ir ao estado 50
    assignment_expression  ir ao estado 51
    term                   ir ao estado 52
    factor                 ir ao estado 53


Estado 36

   28 stmt: WHILE '(' . value compare_assignment value ')' block

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    value  ir ao estado 54


Estado 37

   26 stmt: IF '(' . value compare_assignment value ')' block
   27     | IF '(' . value compare_assignment value ')' block ELSE block

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    value  ir ao estado 55


Estado 38

    7 value: NUM_INT .

    $padrão  reduzir usando a regra 7 (value)


Estado 39

    8 value: NUM_FLOAT .

    $padrão  reduzir usando a regra 8 (value)


Estado 40

    9 value: CARACTERE .

    $padrão  reduzir usando a regra 9 (value)


Estado 41

   10 value: ID .
   11      | ID . '.' FIRST

    '.'  deslocar, e ir ao estado 56

    $padrão  reduzir usando a regra 10 (value)


Estado 42

    3 function: type_struct ID '(' argList ')' '{' stmtList RETURN value . ';' '}'

    ';'  deslocar, e ir ao estado 57


Estado 43

   23 stmt: type_struct ID . ';'

    ';'  deslocar, e ir ao estado 58


Estado 44

   30 stmt: type_struct_expression ';' .

    $padrão  reduzir usando a regra 30 (stmt)


Estado 45

    4 valueList: valueList . ',' value
   24 stmt: ID '(' valueList . ')' ';'

    ')'  deslocar, e ir ao estado 59
    ','  deslocar, e ir ao estado 60


Estado 46

    5 valueList: value .

    $padrão  reduzir usando a regra 5 (valueList)


Estado 47

   47 type_struct_expression: ID '.' SETLAST . ARROW value

    ARROW  deslocar, e ir ao estado 61


Estado 48

   10 value: ID .
   11      | ID . '.' FIRST
   25 stmt: ID '=' ID . '(' valueList ')' ';'
   48 type_struct_expression: ID '=' ID . '.' RMVFIRST

    '('  deslocar, e ir ao estado 62
    '.'  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 10 (value)


Estado 49

   46 factor: '(' . assignment_expression ')'

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41
    '('        deslocar, e ir ao estado 49

    value                  ir ao estado 50
    assignment_expression  ir ao estado 64
    term                   ir ao estado 52
    factor                 ir ao estado 53


Estado 50

   45 factor: value .

    $padrão  reduzir usando a regra 45 (factor)


Estado 51

   29 stmt: ID '=' assignment_expression . ';'
   39 assignment_expression: assignment_expression . '+' term
   40                      | assignment_expression . '-' term

    ';'  deslocar, e ir ao estado 65
    '+'  deslocar, e ir ao estado 66
    '-'  deslocar, e ir ao estado 67


Estado 52

   41 assignment_expression: term .
   42 term: term . '*' factor
   43     | term . '/' factor

    '*'  deslocar, e ir ao estado 68
    '/'  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 41 (assignment_expression)


Estado 53

   44 term: factor .

    $padrão  reduzir usando a regra 44 (term)


Estado 54

   28 stmt: WHILE '(' value . compare_assignment value ')' block

    EQ   deslocar, e ir ao estado 70
    NEQ  deslocar, e ir ao estado 71
    LEQ  deslocar, e ir ao estado 72
    GEQ  deslocar, e ir ao estado 73
    LT   deslocar, e ir ao estado 74
    GT   deslocar, e ir ao estado 75

    compare_assignment  ir ao estado 76


Estado 55

   26 stmt: IF '(' value . compare_assignment value ')' block
   27     | IF '(' value . compare_assignment value ')' block ELSE block

    EQ   deslocar, e ir ao estado 70
    NEQ  deslocar, e ir ao estado 71
    LEQ  deslocar, e ir ao estado 72
    GEQ  deslocar, e ir ao estado 73
    LT   deslocar, e ir ao estado 74
    GT   deslocar, e ir ao estado 75

    compare_assignment  ir ao estado 77


Estado 56

   11 value: ID '.' . FIRST

    FIRST  deslocar, e ir ao estado 78


Estado 57

    3 function: type_struct ID '(' argList ')' '{' stmtList RETURN value ';' . '}'

    '}'  deslocar, e ir ao estado 79


Estado 58

   23 stmt: type_struct ID ';' .

    $padrão  reduzir usando a regra 23 (stmt)


Estado 59

   24 stmt: ID '(' valueList ')' . ';'

    ';'  deslocar, e ir ao estado 80


Estado 60

    4 valueList: valueList ',' . value

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    value  ir ao estado 81


Estado 61

   47 type_struct_expression: ID '.' SETLAST ARROW . value

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    value  ir ao estado 82


Estado 62

   25 stmt: ID '=' ID '(' . valueList ')' ';'

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    $padrão  reduzir usando a regra 6 (valueList)

    valueList  ir ao estado 83
    value      ir ao estado 46


Estado 63

   11 value: ID '.' . FIRST
   48 type_struct_expression: ID '=' ID '.' . RMVFIRST

    FIRST     deslocar, e ir ao estado 78
    RMVFIRST  deslocar, e ir ao estado 84


Estado 64

   39 assignment_expression: assignment_expression . '+' term
   40                      | assignment_expression . '-' term
   46 factor: '(' assignment_expression . ')'

    ')'  deslocar, e ir ao estado 85
    '+'  deslocar, e ir ao estado 66
    '-'  deslocar, e ir ao estado 67


Estado 65

   29 stmt: ID '=' assignment_expression ';' .

    $padrão  reduzir usando a regra 29 (stmt)


Estado 66

   39 assignment_expression: assignment_expression '+' . term

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41
    '('        deslocar, e ir ao estado 49

    value   ir ao estado 50
    term    ir ao estado 86
    factor  ir ao estado 53


Estado 67

   40 assignment_expression: assignment_expression '-' . term

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41
    '('        deslocar, e ir ao estado 49

    value   ir ao estado 50
    term    ir ao estado 87
    factor  ir ao estado 53


Estado 68

   42 term: term '*' . factor

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41
    '('        deslocar, e ir ao estado 49

    value   ir ao estado 50
    factor  ir ao estado 88


Estado 69

   43 term: term '/' . factor

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41
    '('        deslocar, e ir ao estado 49

    value   ir ao estado 50
    factor  ir ao estado 89


Estado 70

   33 compare_assignment: EQ .

    $padrão  reduzir usando a regra 33 (compare_assignment)


Estado 71

   34 compare_assignment: NEQ .

    $padrão  reduzir usando a regra 34 (compare_assignment)


Estado 72

   35 compare_assignment: LEQ .

    $padrão  reduzir usando a regra 35 (compare_assignment)


Estado 73

   36 compare_assignment: GEQ .

    $padrão  reduzir usando a regra 36 (compare_assignment)


Estado 74

   37 compare_assignment: LT .

    $padrão  reduzir usando a regra 37 (compare_assignment)


Estado 75

   38 compare_assignment: GT .

    $padrão  reduzir usando a regra 38 (compare_assignment)


Estado 76

   28 stmt: WHILE '(' value compare_assignment . value ')' block

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    value  ir ao estado 90


Estado 77

   26 stmt: IF '(' value compare_assignment . value ')' block
   27     | IF '(' value compare_assignment . value ')' block ELSE block

    NUM_INT    deslocar, e ir ao estado 38
    NUM_FLOAT  deslocar, e ir ao estado 39
    CARACTERE  deslocar, e ir ao estado 40
    ID         deslocar, e ir ao estado 41

    value  ir ao estado 91


Estado 78

   11 value: ID '.' FIRST .

    $padrão  reduzir usando a regra 11 (value)


Estado 79

    3 function: type_struct ID '(' argList ')' '{' stmtList RETURN value ';' '}' .

    $padrão  reduzir usando a regra 3 (function)


Estado 80

   24 stmt: ID '(' valueList ')' ';' .

    $padrão  reduzir usando a regra 24 (stmt)


Estado 81

    4 valueList: valueList ',' value .

    $padrão  reduzir usando a regra 4 (valueList)


Estado 82

   47 type_struct_expression: ID '.' SETLAST ARROW value .

    $padrão  reduzir usando a regra 47 (type_struct_expression)


Estado 83

    4 valueList: valueList . ',' value
   25 stmt: ID '=' ID '(' valueList . ')' ';'

    ')'  deslocar, e ir ao estado 92
    ','  deslocar, e ir ao estado 60


Estado 84

   48 type_struct_expression: ID '=' ID '.' RMVFIRST .

    $padrão  reduzir usando a regra 48 (type_struct_expression)


Estado 85

   46 factor: '(' assignment_expression ')' .

    $padrão  reduzir usando a regra 46 (factor)


Estado 86

   39 assignment_expression: assignment_expression '+' term .
   42 term: term . '*' factor
   43     | term . '/' factor

    '*'  deslocar, e ir ao estado 68
    '/'  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 39 (assignment_expression)


Estado 87

   40 assignment_expression: assignment_expression '-' term .
   42 term: term . '*' factor
   43     | term . '/' factor

    '*'  deslocar, e ir ao estado 68
    '/'  deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 40 (assignment_expression)


Estado 88

   42 term: term '*' factor .

    $padrão  reduzir usando a regra 42 (term)


Estado 89

   43 term: term '/' factor .

    $padrão  reduzir usando a regra 43 (term)


Estado 90

   28 stmt: WHILE '(' value compare_assignment value . ')' block

    ')'  deslocar, e ir ao estado 93


Estado 91

   26 stmt: IF '(' value compare_assignment value . ')' block
   27     | IF '(' value compare_assignment value . ')' block ELSE block

    ')'  deslocar, e ir ao estado 94


Estado 92

   25 stmt: ID '=' ID '(' valueList ')' . ';'

    ';'  deslocar, e ir ao estado 95


Estado 93

   28 stmt: WHILE '(' value compare_assignment value ')' . block

    ID     deslocar, e ir ao estado 26
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    WHILE  deslocar, e ir ao estado 27
    IF     deslocar, e ir ao estado 28
    QUEUE  deslocar, e ir ao estado 5
    '{'    deslocar, e ir ao estado 96

    type_struct             ir ao estado 30
    type_simple             ir ao estado 9
    stmt                    ir ao estado 97
    block                   ir ao estado 98
    type_struct_expression  ir ao estado 32


Estado 94

   26 stmt: IF '(' value compare_assignment value ')' . block
   27     | IF '(' value compare_assignment value ')' . block ELSE block

    ID     deslocar, e ir ao estado 26
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    WHILE  deslocar, e ir ao estado 27
    IF     deslocar, e ir ao estado 28
    QUEUE  deslocar, e ir ao estado 5
    '{'    deslocar, e ir ao estado 96

    type_struct             ir ao estado 30
    type_simple             ir ao estado 9
    stmt                    ir ao estado 97
    block                   ir ao estado 99
    type_struct_expression  ir ao estado 32


Estado 95

   25 stmt: ID '=' ID '(' valueList ')' ';' .

    $padrão  reduzir usando a regra 25 (stmt)


Estado 96

   32 block: '{' . stmtList '}'

    $padrão  reduzir usando a regra 22 (stmtList)

    stmtList  ir ao estado 100


Estado 97

   31 block: stmt .

    $padrão  reduzir usando a regra 31 (block)


Estado 98

   28 stmt: WHILE '(' value compare_assignment value ')' block .

    $padrão  reduzir usando a regra 28 (stmt)


Estado 99

   26 stmt: IF '(' value compare_assignment value ')' block .
   27     | IF '(' value compare_assignment value ')' block . ELSE block

    ELSE  deslocar, e ir ao estado 101

    ELSE      [reduzir usando a regra 26 (stmt)]
    $padrão  reduzir usando a regra 26 (stmt)


Estado 100

   21 stmtList: stmtList . stmt
   32 block: '{' stmtList . '}'

    ID     deslocar, e ir ao estado 26
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    WHILE  deslocar, e ir ao estado 27
    IF     deslocar, e ir ao estado 28
    QUEUE  deslocar, e ir ao estado 5
    '}'    deslocar, e ir ao estado 102

    type_struct             ir ao estado 30
    type_simple             ir ao estado 9
    stmt                    ir ao estado 31
    type_struct_expression  ir ao estado 32


Estado 101

   27 stmt: IF '(' value compare_assignment value ')' block ELSE . block

    ID     deslocar, e ir ao estado 26
    VOID   deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    INT    deslocar, e ir ao estado 3
    CHAR   deslocar, e ir ao estado 4
    WHILE  deslocar, e ir ao estado 27
    IF     deslocar, e ir ao estado 28
    QUEUE  deslocar, e ir ao estado 5
    '{'    deslocar, e ir ao estado 96

    type_struct             ir ao estado 30
    type_simple             ir ao estado 9
    stmt                    ir ao estado 97
    block                   ir ao estado 103
    type_struct_expression  ir ao estado 32


Estado 102

   32 block: '{' stmtList '}' .

    $padrão  reduzir usando a regra 32 (block)


Estado 103

   27 stmt: IF '(' value compare_assignment value ')' block ELSE block .

    $padrão  reduzir usando a regra 27 (stmt)
